// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PureOptionDefault Component should handle array 1`] = `<DocumentFragment />`;

exports[`PureOptionDefault Component should handle array 2`] = `
<DocumentFragment>
  <div
    class="small"
  >
    Default: [ ]
  </div>
</DocumentFragment>
`;

exports[`PureOptionDefault Component should handle boolean type 1`] = `
<DocumentFragment>
  <div
    class="small"
  >
    Default: false
  </div>
</DocumentFragment>
`;

exports[`PureOptionDefault Component should handle null value 1`] = `
<DocumentFragment>
  <div
    class="small"
  >
    Default: null
  </div>
</DocumentFragment>
`;

exports[`PureOptionDefault Component should handle string 1`] = `
<DocumentFragment>
  <div
    class="small"
  >
    Default: ""
  </div>
</DocumentFragment>
`;

exports[`PureOptionDefault Component should return null when the value is default 1`] = `<DocumentFragment />`;
